added img and js date

--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!--Example Test HTML File if needed-->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
-<head>
-  <title>Kyle Johnson</title>
-</head>
-<body>
- <h1>Kyle Johnson</h1>
-</body>
-</html>  
+  <head>
+    <title>Kyle Johnson</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/style.css"> 
+  </head>
+
+  <body>
+    <header>
+      <h1>Kyle Johnson</h1>
+    </header>
+    
+    <main>
+      <img src="img/IMG_20171118_104154805.jpg" alt="Picture of my wife and I">
+      <h2>WDD 230: Assignment Portal</h2>
+      <hr>
+      <ul>
+        <li>Lesson 01: <a href="#">You're already here!</a></li>
+        <li>Lesson 02: <a href="#">Assignment Link</a></li>
+        <li>Lesson 03: <a href="#">Assignment Link</a></li>
+        <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+      </ul>
+    </main>
+
+<footer>
+  <p>&copy; | Kyle Johnson | Missouri | 
+    <a href="www.byui.edu/online">BYUI Online Learning</a></p>
+    <p>Last updated: <span id='datePlace'></span></p>
+    <script src="scripts/update-date.js"></script>
+</footer>
+
+  </body>
+</html>
