--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <title>Kyle Johnson</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css"> 
+    <link rel="stylesheet" href="/small.css"> 
+    <link rel="stylesheet" href="/medium.css">
   </head>
 
   <body>
     <header>
       <h1>Kyle Johnson</h1>
+      <img src="img/IMG_20171118_104154805.jpg" alt="Picture of my wife and I">
     </header>
     
     <main>
-      <img src="img/IMG_20171118_104154805.jpg" alt="Picture of my wife and I">
+      
       <h2>WDD 230: Assignment Portal</h2>
       <hr>
       <ul>
