Add lesson 2 folder and content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <footer>
   <p>&copy; | Kyle Johnson | Missouri | 
-    <a href="www.byui.edu/online">BYUI Online Learning</a></p>
+    <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
     <p>Last updated: <span id='datePlace'></span></p>
     <script src="scripts/update-date.js"></script>
 </footer>
