Added media query to make mobile first.

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design Principles | Kyle Johnson | WDD 230</title>
     <link rel="stylesheet" href="css/lesson2style.css" />
+    <link rel="stylesheet" href="css/lesson2medium.css" /> 
   </head>
   <body>
     <header>
