--- a/index.html
+++ b/index.html
@@ -3,36 +3,42 @@
 <html lang="en-us">
   <head>
     <title>Kyle Johnson</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/small.css"> 
-    <link rel="stylesheet" href="/medium.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/small.css" />
+    <link rel="stylesheet" href="/medium.css" />
   </head>
 
   <body>
     <header>
       <h1>Kyle Johnson</h1>
-      <img src="img/IMG_20171118_104154805.jpg" alt="Picture of my wife and I">
+      <img
+        src="img/IMG_20171118_104154805.jpg"
+        alt="Picture of my wife and I"
+      />
     </header>
-    
+
     <main>
-      
       <h2>WDD 230: Assignment Portal</h2>
-      <hr>
+      <hr />
       <ul>
         <li>Lesson 01: <a href="#">You're already here!</a></li>
-        <li>Lesson 02: <a href="#">Assignment Link</a></li>
+        <li>
+          Lesson 02:
+          <a href="lesson2/design-principles.html">Principles of Design</a>
+        </li>
         <li>Lesson 03: <a href="#">Assignment Link</a></li>
         <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
       </ul>
     </main>
 
-<footer>
-  <p>&copy; | Kyle Johnson | Missouri | 
-    <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
-    <p>Last updated: <span id='datePlace'></span></p>
-    <script src="scripts/update-date.js"></script>
-</footer>
-
+    <footer>
+      <p>
+        &copy; | Kyle Johnson | Missouri |
+        <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+      </p>
+      <p>Last updated: <span id="datePlace"></span></p>
+      <script src="scripts/update-date.js"></script>
+    </footer>
   </body>
 </html>
