added additional media query

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design Principles | Kyle Johnson | WDD 230</title>
     <link rel="stylesheet" href="css/lesson2style.css" />
-    <link rel="stylesheet" href="css/lesson2medium.css" /> 
+    <link rel="stylesheet" href="css/lesson2medium.css" />
+    <link rel="stylesheet" href="css/lesson2large.css" />
   </head>
   <body>
     <header>
@@ -17,7 +18,7 @@
         <li id="nav-link1"><a href="#heirarchy">Visual Hierarchy</a></li>
         <li id="nav-link2"><a href="#thirds">Rule of Thirds</a></li>
         <li id="nav-link3">
-          <a href="#space_design">White Space and Clean Design</a>
+          <a href="#space_design">White Space & Clean Design</a>
         </li>
       </ul>
     </nav>
@@ -29,16 +30,21 @@
             <a href="https://www.hermanmiller.com">Herman Miller, Inc.</a>
           </h2>
           <div class="image-grid">
-            <img class="img1" src="images/small/HermanMiller-home.jpg" alt="" />
+            <img
+              class="img1"
+              src="images/small/HermanMiller-home.jpg"
+              alt="Mobile screenshot of the Herman Miller homepage"
+            />
             <img
               class="img2"
               src="images/small/HermanMiller-product-top.jpg"
-              alt=""
+              alt="Mobile screenshot of the top of a product page for Herman Miller's 
+              Embody model chair"
             />
             <img
               class="img3"
               src="images/small/HermanMiller-product-mid.jpg"
-              alt=""
+              alt="Mobile screenshot of the middle of the Embody chair product page from Herman Miller."
             />
           </div>
           <p>
@@ -60,9 +66,21 @@
             <a href="https://www.sfmoma.org/visit-toolkit/">SFMOMA</a>
           </h2>
           <div class="image-grid">
-            <img class="img1" src="images/small/SFMOMA-top.jpg" alt="" />
-            <img class="img2" src="images/small/SFMOMA-top-info.jpg" alt="" />
-            <img class="img3" src="images/small/SFMOMA-info-pages.jpg" alt="" />
+            <img
+              class="img1"
+              src="images/small/SFMOMA-top.jpg"
+              alt="The top of the SFMOMA visitor's guide page."
+            />
+            <img
+              class="img2"
+              src="images/small/SFMOMA-top-info.jpg"
+              alt="The middle of the SFMOMA visitor's guide page showing additional information for the visitor."
+            />
+            <img
+              class="img3"
+              src="images/small/SFMOMA-info-pages.jpg"
+              alt="An addiotional screenshot of the SFMOMA visitor's guide showing links to other pages on the SFMOMA site."
+            />
           </div>
           <p>
             The San Francisco Museum of Modern Art (SFMOMA) houses a large
