Final Week 3 commit

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spudweather.com</title>
-    <link rel="stylesheet" href="css/lesson3large.css" />
-    <link rel="stylesheet" href="css/lesson3medium.css" />
+    <title>Website Planning Document | WDD 230</title>
+    <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/lesson3style.css" />
+    <link rel="stylesheet" href="css/lesson3medium.css" />
+    <link rel="stylesheet" href="css/lesson3large.css" />
+    
   </head>
   <body>
     <header>
@@ -23,8 +25,8 @@
     <div id="content">
       <main>
         <div id="name">
-          <h2>Name</h2>
-          <h3>Spud Weather</h3>
+          <h2>Home</h2>
+          <h3>Name: Spud Weather</h3>
 
           <p>
             The respective domain of spudweather.com
@@ -36,7 +38,7 @@
         </div>
         <hr />
         <div id="purpose">
-          <h2>Site Purpose</h2>
+          <h3>Site Purpose</h3>
           <p>
             The purpose of this site will be to provide information reagrding
             the weather of the southeast corner of Idaho as well as providing a
@@ -46,8 +48,8 @@
           </p>
         </div>
         <hr />
-        <div id="logo">
-          <h2>Logo</h2>
+          <h3>Logo</h3>
+          <div id="logo">
           <img src="images/logo.png" alt="The dark green logo of spudweather.com overlaid on an avocado green background." />
           <img src="images/logo_transparent.png" alt="The dark green logo of spudweather.com on a logo_transparent background.">
         </div>
