--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -1,64 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/lesson3large.css" />
-    <link rel="stylesheet" href="css/lesson3medium.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Target Audience | Website Planning Document | WDD 230</title>
+    <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/lesson3style.css" />
-</head>
-<body>
+    <link rel="stylesheet" href="css/lesson3medium.css" />
+    <link rel="stylesheet" href="css/lesson3large.css" />
+  </head>
+  <body>
     <header>
-        <h1>Website Planning Document</h1>
-      </header>
+      <h1>Website Planning Document</h1>
+    </header>
     <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Target Audience</a></li>
-          <li><a href="color-scheme.html">Colors</a></li>
-          <li><a href="typography.html">Typography</a></li>
-        </ul>
-      </nav>
-      <div id="content">
-
-      <div id="target-audience">
-        <h2>Target Audience</h2>  
-        <p></p>
-          <hr>
-      </div>
-
-      <div id="personas">
-          <h2>"Personas"</h2>
-          <h3>Persona 1</h3>
-          <p>Jim is a farmer and wants to have an easily accessible and easy to use site to 
-            check the local weather for his ranch in Preston. He is likely to use the site 
-            from a mobile device. He is getting on in years, and doesn't always have his 
-            glasses with him. As a result, he needs a site that can easily scale and is 
-            easy to read.
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Target Audience</a></li>
+        <li><a href="color-scheme.html">Colors</a></li>
+        <li><a href="typography.html">Typography</a></li>
+      </ul>
+    </nav>
+    <div id="content">
+      <main>
+        <div id="target-audience">
+          <h2>Target Audience</h2>
+          <h3>Target Audience</h3>
+          <p>
+            The traget audience for this site are residents of the southeastern
+            corner of Idaho or those that have an interest in the area. This
+            could inlude those who have cabins in the area as well as those who
+            are traveling to the area, or are considering travel in the area.
+            This site will provide those users with weather related information
+            for that area.
           </p>
-          <h3>Persona 2</h3>
-          <p>Tim works in Logan but has a cabin outside of Fish Haven. He often has the 
-            weather at the cabin pulled up on his computer. He appreciates a site that is
-            easy to use and has clean design. He likes to check the weather to be able to
-            know the best weeks/weekends to take family up to the cabin, or which weeks he
+          <hr >
+        </div>
+
+        <div id="personas">
+          <h3>"Personas"</h3>
+          <h4>Persona 1</h4>
+          <p>
+            Jim is a farmer and wants to have an easily accessible and easy to
+            use site to check the local weather for his ranch in Preston. He is
+            likely to use the site from a mobile device. He is getting on in
+            years, and doesn't always have his glasses with him. As a result, he
+            needs a site that can easily scale and is easy to read.
+          </p>
+          <h4>Persona 2</h4>
+          <p>
+            Tim works in Logan but has a cabin outside of Fish Haven. He often
+            has the weather at the cabin pulled up on his computer. He
+            appreciates a site that is easy to use and has clean design. He
+            likes to check the weather to be able to know the best
+            weeks/weekends to take family up to the cabin, or which weeks he
             should have it available on Airbnb.
           </p>
-          <hr>
-      </div>
+          <hr />
+        </div>
 
-      <div id="scenarios">
+        <div id="scenarios">
+          <h3>Scenarios</h3>
           <ol>
-              <li>What's the weather going to be like in Preston/Fish Haven/Soda Springs?</li>
-              <li>What did the hail stones look like that fell around Bear Lake?</li>
-              <li>Is my child's school closed because of the weather?</li>
-              <li>How long is this storm going to last?</li>
-              <li>Is the fishing good at Bear Lake right now?</li>
+            <li>
+              What's the weather going to be like in Preston/Fish Haven/Soda
+              Springs?
+            </li>
+            <li>
+              What did the hail stones look like that fell around Bear Lake?
+            </li>
+            <li>Is my child's school closed because of the weather?</li>
+            <li>How long is this storm going to last?</li>
+            <li>Is the fishing good at Bear Lake right now?</li>
           </ol>
-      </div>
-    
-</main>
-    <footer>
+        </div>
+      </main>
+      <footer>
         <p>
           &copy; | Kyle Johnson | Missouri |
           <a href="https://www.byui.edu/online">BYUI Online Learning</a>
@@ -67,5 +84,5 @@
         <script src="../scripts/update-date.js"></script>
       </footer>
     </div>
-</body>
+  </body>
 </html>
