--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/lesson3large.css" />
-    <link rel="stylesheet" href="css/lesson3medium.css" />
+    <title>Typography | Website Planning Document | WDD 230</title>
+    <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/lesson3style.css" />
+    <link rel="stylesheet" href="css/lesson3medium.css" />
+    <link rel="stylesheet" href="css/lesson3large.css" />
   </head>
   <body>
     <header>
@@ -22,14 +23,24 @@
     </nav>
     <div id="content">
       <main>
-        The fonts I am planning on using are
-        <a
-          href="https://fonts.google.com/specimen/Special+Elite?category=Display&preview.size=64&preview.layout=row#standard-styles"
-          >"Special Elite"</a
-        >and <a href="https://fonts.google.com/specimen/Lexend+Giga?query=lexend#standard-styles">Lexend Giga.</a>
+        <br />
+        <h2>Typography</h2>
+        <p>
+          The fonts I am planning on using are
+          <a
+            href="https://fonts.google.com/specimen/Special+Elite?category=Display&preview.size=64&preview.layout=row#standard-styles"
+            >"Special Elite"</a
+          >and
+          <a
+            href="https://fonts.google.com/specimen/Lexend+Giga?query=lexend#standard-styles"
+            >Lexend Giga.</a
+          >
 
-        Lexend Giga will be the predominant font, picked specifically for its readability. 
-        Special Elite will mostly be used for the top level headings.
+          Lexend Giga will be the predominant font, picked specifically for its
+          readability. Special Elite will mostly be used for the top level
+          headings; it was selected to match the logo to create a level of
+          visual cohesiveness across the site.
+        </p>
       </main>
       <footer>
         <p>
