--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Kyle Johnson</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="/small.css" />
     <link rel="stylesheet" href="/medium.css" />
   </head>
