--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design Principles | Kyle Johnson | WDD 230</title>
+    <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/lesson2style.css" />
     <link rel="stylesheet" href="css/lesson2medium.css" />
     <link rel="stylesheet" href="css/lesson2large.css" />
