--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/lesson3large.css" />
-    <link rel="stylesheet" href="css/lesson3medium.css" />
+    <title>Color Scheme | Website Planning Document | WDD 230</title>
+    <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/lesson3style.css" />
+    <link rel="stylesheet" href="css/lesson3medium.css" />
+    <link rel="stylesheet" href="css/lesson3large.css" />
   </head>
   <body>
     <header>
@@ -23,6 +24,7 @@
 
     <div id="content">
       <main>
+        <br />
         <h2>Color Scheme</h2>
         <p>This is an example page using my intended color scheme. Click button
         below to show intended color scheme.</p>
