--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           Lesson 02:
           <a href="lesson2/design-principles.html">Principles of Design</a>
         </li>
-        <li>Lesson 03: <a href="lesson3/">Assignment Link</a></li>
+        <li>Lesson 03: <a href="lesson3/">Website Planning Document</a></li>
         <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
       </ul>
     </main>
