Week 4 Early Commit.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="lesson2/design-principles.html">Principles of Design</a>
         </li>
         <li>Lesson 03: <a href="lesson3/">Website Planning Document</a></li>
-        <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+        <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
       </ul>
     </main>
 
