--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -62,11 +62,11 @@
             src="https://loremflickr.com/100/100/sun,sky,cloud"
             alt="Graphical representation of forecast for day 5"
           />
-          <p>Day 1 Weather</p>
+          <!-- <p>Day 1 Weather</p>
           <p>Day 2 Weather</p>
           <p>Day 3 Weather</p>
           <p>Day 4 Weather</p>
-          <p>Day 5 Weather</p>
+          <p>Day 5 Weather</p> -->
         </div>
         </div>
         <div id="article" class="light-background">
