--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -71,7 +71,7 @@
         </div>
         <div id="article" class="light-background">
             <h3>Article Title</h3>
-            <img src="https://loremflickr.com/300/250/potato" alt="" />
+            <img src="https://loremflickr.com/300/250/potato" alt="Potato picture" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
             consectetur rerum provident ea exercitationem vero delectus
@@ -97,11 +97,11 @@
       </main>
       <footer>
         <div id="map"></div>
-        <img src="https://loremflickr.com/400/200/Idaho,Wyoming,map/all" alt="" />
+        <img src="https://loremflickr.com/400/200/Idaho,Wyoming,map/all" alt="Map of SpuadWeather's area" />
         <div id="contact">
             <p>Address: Lorem ipsum dolor sit amet.</p>
             <p>Telephone: Lorem, ipsum dolor.</p>
-            <p>Email:<email>lorem@ipsum.info</email></p>
+            <p>Email:</p><email>lorem@ipsum.info</email>
             <div id="social"></div>
         </div>
       </footer>
