--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -69,7 +69,7 @@
           <p>Day 5 Weather</p> -->
         </div>
         </div>
-        <div id="article" class="light-background">
+        <div id="article" class="light-background" lang="zxx">
             <h3>Article Title</h3>
             <img src="https://loremflickr.com/300/250/potato" alt="Potato picture" />
           <p>
@@ -101,7 +101,7 @@
         <div id="contact">
             <p>Address: Lorem ipsum dolor sit amet.</p>
             <p>Telephone: Lorem, ipsum dolor.</p>
-            <p>Email:</p><email>lorem@ipsum.info</email>
+            <p>Email: lorem@ipsum.info</p>
             <div id="social"></div>
         </div>
       </footer>
