Fixed Lesson 5 JS issues

--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="content">
-      
+      <span id="info-banner"><p></p></span>
       <header>
         <img src="images/logo_transparent.png" alt="SpudWeather logo" />
         <h1>SpudWeather</h1>
@@ -29,7 +29,6 @@
         </ul>
       </nav>
       <main>
-        <span id="info-banner"></span>
         <div id="title">
           <h2>Preston Idaho</h2>
         </div>
