--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="content">
-      <span id="info-banner"><p></p></span>
+      <span id="info-banner"></span>
       <header>
         <img src="images/logo_transparent.png" alt="SpudWeather logo" />
         <h1>SpudWeather</h1>
