--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         <li>Lesson 03: <a href="lesson3/">Website Planning Document</a></li>
         <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
         <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Town Page (Week 2)</a></li>
+        <li>Lesson 06:<a href="#"></a></li>
+        <li>Lesson 07:<a href="#"></a></li>
+        <li>Lesson 08:<a href="#"></a></li>
+        <li>Lesson 09:<a href="#"></a></li>
+        <li>Lesson 10:<a href="#"></a></li>
+        <li>Lesson 11:<a href="#"></a></li>
+        <li>Lesson 12:<a href="#"></a></li>
+        <li>Lesson 13:<a href="#"></a></li>
+        <li>Lesson 14:<a href="#"></a></li>
       </ul>
     </main>
 
