--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
       </p>
       <p>Last updated: <span id="datePlace"></span></p>
       <script src="scripts/update-date.js"></script>
+      
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>WebFont.load({
+      google: {
+        families: [
+        'Playfair Display', 'Raleway'
+        ]
+      }
+    }) </script>
   </body>
 </html>
