--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+<head>
     <title>Preston, ID | SpudWeather</title>
     <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/standard.css" />
@@ -23,8 +23,8 @@
           <li><a class="ham" href="#">&#9776; Menu</a></li>
           <li><a href="#">Home</a></li>
           <li class="active"><a href="#">Preston</a></li>
-          <li><a href="#">Soda Springs</a></li>
-          <li><a href="#">Fish Haven</a></li>
+          <li><a href="soda-springs-6.html">Soda Springs</a></li>
+          <li><a href="fish-haven-6.html">Fish Haven</a></li>
           <li><a href="#">Storm Center</a></li>
           <li><a href="#">Gallery</a></li>
         </ul>
@@ -37,7 +37,7 @@
           <!-- large: 960px, medium: 720px, small 540px -->
           <picture>
             <source srcset="images\wdd230_image_franklinLarge.jpg" media="(min-width: 60em)">
-            <source srcset="images\wdd230_image_franklinMedium.jpg" media="(min-width: 45em) and (max-width: 59.9em)">
+            <source srcset="images\wdd230_image_franklinMedium.jpg" media="(min-width: 45em) and (max-width: 60em)">
             <img src="images/wdd230_image_franklinSmall.jpg" alt="Week 6 required hero image">
           <!-- <img -->
             <!-- src="https://loremflickr.com/960/300/farm,field,crops/all" -->
@@ -114,6 +114,7 @@
             <p>Day 5 Weather</p>
             </div>
         </div>
+      </div>
         <div id="article" class="light-background" lang="zxx">
           <h3>Article Title</h3>
           <img
@@ -150,8 +151,8 @@
         />
         <div id="contact">
           <p>Address: Lorem ipsum dolor sit amet.</p>
-          <p>Telephone: Lorem, ipsum dolor.</p>
-          <p>Email: lorem@ipsum.info</p>
+          <p>Telephone: (208) 867-5309</p>
+          <email>  Email: lorem@ipsum.info</email>
           <div id="social"></div>
         </div>
       </footer>
