Week 7 initial push

--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -49,19 +49,19 @@
             <table>
               <tr>
                 <td>Currently: </td>
-                <td id="current"></td>
+                <td id="current">Retrieving...</td>
               </tr>
               <tr>
                 <td>Temperature:</td>
-                <td id="temp"></td>
+                <td id="temp">Retrieving...</td>
               </tr>
               <tr>
                 <td>Wind Speed:</td>
-                <td id="wind-speed"></td>
+                <td id="wind-speed">Retrieving...</td>
               </tr>
               <tr>
                 <td>Wind Chill: </td>
-                <td id="wind-chill"></td>
+                <td id="wind-chill">Calculating...</td>
               </tr>
               <tr>
                 <td></td>
