--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
         <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Town Page (Week 2)</a></li>
         <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Town Page (Week 3)</a></li>
-        <li>Lesson 07: <a href="#"></a></li>
+        <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Loading of Images</a> | 
+          <a href="lesson7/gallery-7.html">Gallery Center page</a></li>
         <li>Lesson 08: <a href="#"></a></li>
         <li>Lesson 09: <a href="#"></a></li>
         <li>Lesson 10: <a href="#"></a></li>
