--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="images/favicon.png" />
 
   </head>
-  <body onload="getWeather('preston');">
+  <body>
     <div id="content">
       <span id="info-banner"></span>
       <header>
@@ -34,14 +34,41 @@
           <h2>Weather Gallery</h2>
         </div>
         <div id="gallery">
-        <img data-src="" src="images/micros/Caucasus-Mtns.jpg" alt="" srcset="">
-        <img data-src="" src="images/micros/Covered_In_Ice.jpg" alt="" srcset="">
-        <img data-src="" src="images/micros/dust_storm.jpg" alt="" srcset="">
-        <img data-src="" src="images/micros/Frozen_rose_hip_(31742987540).jpg" alt="" srcset="">
-        <img data-src="" src="images/micros/Hagelkorn.jpg" alt="" srcset="">
-        <img data-src="" src="images/micros/Playas_de_Encarnación.jpg" alt="" srcset="">
-        <img data-src="" src="images/micros/Thunderstorm_Bergen.jpg" alt="" srcset="">
-        <img data-src="" src="images/micros/" alt="" srcset="">
+        <div class="gallery-1">
+        <img data-src="images/Caucasus-Mtns.jpg" src="images/micros/Caucasus-Mtns.jpg" alt="Cloud and glacier covered mountains" >
+        <p>Snow capped mountains</p>
+        </div>
+        <div class="gallery-2">
+          <img data-src="images/Covered_In_Ice.jpeg" src="images/micros/Covered_In_Ice.jpeg" alt="Some tall plants/grasses covered in ice" >
+        <p>Even if it makes things slick, ice can be beautiful!</p>
+        </div>
+        <div class="gallery-3">
+          <img data-src="images/dust_storm.jpg" src="images/micros/dust_storm.jpg" alt="A dust storm in the middle of a city">
+        <p>Dust storm rolls through a city</p>
+        </div>
+        <div class="gallery-4">
+          <img data-src="images/Frozen_rose_hip.jpg" src="images/micros/Frozen_rose_hip.jpg" alt="Frozen rose hips on the plant" >
+        <p>A pretty example of hoar frost</p>
+        </div>
+        <div class="gallery-5">
+          <img data-src="images/Hagelkorn.jpg" src="images/micros/Hagelkorn.jpg" alt="A clear, large, layered hail stone">
+        <p>Large, clear hailstones can illustrate the layers of the hail</p>
+        </div>
+        <div class="gallery-6">
+          <img data-src="images/Playas_de_Encarnación.jpg" src="images/micros/Playas_de_Encarnación.jpg" alt="A rainstrom rolling in from through a bay">
+        <p>A storm rolls in...</p>
+        </div>
+        <div class="gallery-7">
+          <img data-src="images/Thunderstorm_Bergen.jpg" src="images/micros/Thunderstorm_Bergen.jpg" alt=" A rainstorm passing over a town" >
+        <p>A downpour can be a welcome event!</p>
+        </div>
+        <div class="gallery-8">
+          <img data-src="images/snow-farm.jpg" src="images/micros/snow-farm.jpg" alt="An old, abandoned barn as part of a farm covered in snow" >
+        <p>An old farm covered in snow</p>
+        </div>
+        <div class="gallery-9">
+          <img data-src="images/plains-n-mountains.jpg" src="images/micros/plains-n-mountains.jpg" alt="A high mountain plain" >
+        <p>The contrast of high mountain plains</p>
         </div>
       </main>
       <footer>
@@ -55,9 +82,10 @@
           <p>Address: Lorem ipsum dolor sit amet.</p>
           <p>Telephone: (208) 867-5309</p>
           <email>  Email: lorem@ipsum.info</email>
-          <div id="social"></div>
+          <span id="social"></span>
         </div>
       </footer>
+        <script src="js/lazyload.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
     WebFont.load({
