--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -39,7 +39,7 @@
         <p>Snow capped mountains</p>
         </div>
         <div class="gallery-2">
-          <img data-src="images/Covered_In_Ice.jpeg" src="images/micros/Covered_In_Ice.jpeg" alt="Some tall plants/grasses covered in ice" >
+          <img data-src="images/Covered_In_Ice.jpeg" src="images/micros/Covered_In_Ice.jpg" alt="Some tall plants/grasses covered in ice" >
         <p>Even if it makes things slick, ice can be beautiful!</p>
         </div>
         <div class="gallery-3">
