--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -38,10 +38,10 @@
         <tr>
           <td>November</td>
           <td>$8,610</td>
-          <td>$7,500</td>
+          <td class="goal-met">$7,500</td>
         </tr>
         <tr>
-          <td>Black Friday</td>
+          <td><em>Black Friday</em></td>
           <td colspan="2">$3,200</td>
         </tr>
         <tr>
