commit for week 6 fixes

--- a/lesson8/preston-7.html
+++ b/lesson8/preston-7.html
@@ -144,11 +144,12 @@
         </div>
       </main>
       <footer>
-        <div id="map"></div>
+        <div id="map">
         <img
           src="https://loremflickr.com/400/200/Idaho,Wyoming,map/all"
           alt="Map of SpuadWeather's area"
         />
+        </div>
         <div id="contact">
           <p>Address: Lorem ipsum dolor sit amet.</p>
           <p>Telephone: (208) 867-5309</p>
