--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -72,7 +72,7 @@
       <!-- storm severity using type range (1 to 10) with a corresponding label that 
         indicates the current range value from 1 to 10.-->
       <!-- Hint: See the Pen HTML Form example objects (Links to an external site.)-->
-        <label class="top">Storm Severity<input type="range" name="severity" min="1" max="10"></label>
+        <label class="top">Storm Severity<input type="range" name="severity" min="1" max="10" step="1" list="numbers"></label>
 
       <!-- storm region using select with drop-down options of "Preston", "Soda Springs", 
         and "Fish Haven".-->
