Fetch/JSON assignment push

--- a/lesson8/preston-7.html
+++ b/lesson8/preston-7.html
@@ -11,6 +11,8 @@
     <link rel="shortcut icon" href="images/favicon.png" />
 
   </head>
+
+  
   <body onload="getWeather('preston');">
     <div id="content">
       <span id="info-banner"></span>
@@ -150,12 +152,12 @@
           alt="Map of SpuadWeather's area"
         />
         </div>
-        <span id="contact">
+        <div id="contact">
           <p>Address: Lorem ipsum dolor sit amet.</p>
           <p>Telephone: (208) 867-5309</p>
-          <email>  Email: lorem@ipsum.info</email>
+          <p>Email: lorem@ipsum.info</p>
           <div id="social"></div>
-        </span>
+        </div>
       </footer>
 
       <script src="js/weather.js"></script>
