--- a/lesson9/preston-7.html
+++ b/lesson9/preston-7.html
@@ -36,8 +36,8 @@
         <div id="banner">
           <!-- large: 960px, medium: 720px, small 540px -->
           <picture>
-            <source srcset="images\wdd230_image_franklinLarge.jpg" media="(min-width: 60em)">
-            <source srcset="images\wdd230_image_franklinMedium.jpg" media="(min-width: 45em) and (max-width: 60em)">
+            <source srcset="images/wdd230_image_franklinLarge.jpg" media="(min-width: 60em)">
+            <source srcset="images/wdd230_image_franklinMedium.jpg" media="(min-width: 45em) and (max-width: 60em)">
             <img src="images/wdd230_image_franklinSmall.jpg" alt="Week 6 required hero image">
           <!-- <img -->
             <!-- src="https://loremflickr.com/960/300/farm,field,crops/all" -->
@@ -144,15 +144,16 @@
         </div>
       </main>
       <footer>
-        <div id="map"></div>
+        <div id="map">
         <img
           src="https://loremflickr.com/400/200/Idaho,Wyoming,map/all"
           alt="Map of SpuadWeather's area"
         />
+      </div>
         <div id="contact">
           <p>Address: Lorem ipsum dolor sit amet.</p>
           <p>Telephone: (208) 867-5309</p>
-          <email>  Email: lorem@ipsum.info</email>
+          <p>Email: lorem@ipsum.info</p>
           <div id="social"></div>
         </div>
       </footer>
