--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -20,7 +20,7 @@
     <img data-src="https://www.loremflickr.com/300/400/flax,field,flower/all" alt="Flowers of the flax plant" src="../lesson6/images/favicon.png">
 </main>
 <footer>
-    <script src="js/lazyload.js"></script>
+    <script src="../scripts/lazyload.js"></script>
 </footer>
 </body>
 </html>
