--- a/lesson9/css/prophets.html
+++ b/lesson9/css/prophets.html
@@ -17,5 +17,5 @@
         Kyle Johnson | BYU-Idaho | WDD 230
       </footer>
 </body>
-<script src="js/prophets.js"></script>
+<script src="../scripts/prophets.js"></script>
 </html>
