--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -16,6 +16,6 @@
       <footer>
         Kyle Johnson | BYU-Idaho | WDD 230
       </footer>
-      <script src="js/prophets.js"></script>
+      <script src="../scripts/prophets.js"></script>
 </body>
 </html>
