--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -34,14 +34,14 @@
       </div>
       </main>
 
-      <script src="scripts/color-changer.js"></script>
+      <script src="../scripts/color-changer.js"></script>
       <footer>
         <p>
           &copy; | Kyle Johnson | Missouri |
           <a href="https://www.byui.edu/online">BYUI Online Learning</a>
         </p>
         <p>Last updated: <span id="datePlace"></span></p>
-        <script src="../scripts/update-date.js"></script>
+        <script src="../../scripts/update-date.js"></script>
       </footer>
     </div>
   </body>
