--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -48,7 +48,7 @@
           <a href="https://www.byui.edu/online">BYUI Online Learning</a>
         </p>
         <p>Last updated: <span id="datePlace"></span></p>
-        <script src="../scripts/update-date.js"></script>
+        <script src="../../scripts/update-date.js"></script>
       </footer>
     </div>
   </body>
