--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -106,7 +106,7 @@
         </div>
       </footer>
 
-      <script src="js/weather.js"></script>
+      <script src="../scripts/weather.js"></script>
     </div>
   </body>
 </html>
