--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -122,8 +122,8 @@
         </div>
       </footer>
 
-      <script src="js/weather.js"></script>
-      <script src="js/saturday.js"></script>
+      <script src="../scripts/weather.js"></script>
+      <script src="../scripts/saturday.js"></script>
     </div>
   </body>
 </html>
