--- a/lesson7/preston-7.html
+++ b/lesson7/preston-7.html
@@ -157,9 +157,9 @@
         </div>
       </footer>
 
-      <script src="js/weather.js"></script>
-      <script src="js/saturday.js"></script>
-      <script src="js/windchill.js"></script>
+      <script src="../scripts/weather.js"></script>
+      <script src="../scripts/saturday.js"></script>
+      <script src="../scripts/weather.js"></script>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
