--- a/lesson8/Form-start/thanks.html
+++ b/lesson8/Form-start/thanks.html
@@ -58,6 +58,6 @@
     <footer>
         &copy; 2018 &bull; Paul Cheney &bull; 123-555-6789
     </footer>
-<script src="js/scripts.js"></script>
+<script src="../scripts/scripts.js"></script>
 </body>
 </html>
