--- a/lesson9/gallery-7.html
+++ b/lesson9/gallery-7.html
@@ -86,7 +86,7 @@
           <span id="social"></span>
         </div>
       </footer>
-        <script src="js/lazyload.js"></script>
+        <script src="../scripts/lazyload.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
     WebFont.load({
