Week 10 Assignment commit

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -5,9 +5,9 @@
 <head>
     <title>Preston, ID | SpudWeather</title>
     <link rel="stylesheet" href="../normalize.css" />
-    <link rel="stylesheet" href="css/standard.css" />
-    <link rel="stylesheet" href="css/medium.css" />
-    <link rel="stylesheet" href="css/large.css" />
+    <link rel="stylesheet" href="../css/weathersite/standard.css" />
+    <link rel="stylesheet" href="../css/weathersite/medium.css" />
+    <link rel="stylesheet" href="../css/weathersite/large.css" />
     <link rel="shortcut icon" href="../images/favicon.png" />
 
   </head>
@@ -64,10 +64,9 @@
                 <td id="wind-chill">Calculating...</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
+                <td>Humidity: </td>
+                <td id="mugginess">Retrieving...</td>
               </tr>
-              
             </table>
           </div>
         </div>
