--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/standard.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
-    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="shortcut icon" href="../images/favicon.png" />
   </head>
   <body>
     <div id="content">
       <span id="info-banner"></span>
       <header>
-        <img src="images/logo_transparent.png" alt="SpudWeather logo" />
+        <img src="../images/logo_transparent.png" alt="SpudWeather logo" />
         <h1>SpudWeather</h1>
       </header>
       <nav>
