--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Loading of Images</a> | 
           <a href="lesson7/gallery-7.html">Gallery Center page</a></li>
         <li>Lesson 08: <a href="lesson8/stormcenter.html">Storm Center</a> | <a href="lesson8/tablebuild.html">Table Build</a></li>
-        <li>Lesson 09: <a href="#"></a></li>
-        <li>Lesson 10: <a href="#"></a></li>
+        <li>Lesson 09: <a href="lesson9/prophets.html">Prophets page</a> | <a href="">Home Page</a></li>
+        <li>Lesson 10: <a href="lesson10/preston-10.html">Preston Weather API</a></li>
         <li>Lesson 11: <a href="#"></a></li>
         <li>Lesson 12: <a href="#"></a></li>
         <li>Lesson 13: <a href="#"></a></li>
