--- a/lesson10/gallery-7.html
+++ b/lesson10/gallery-7.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
-<head>
+
     <title>Preston, ID | SpudWeather</title>
     <link rel="stylesheet" href="../normalize.css" />
-    <link rel="stylesheet" href="css/standard.css" />
-    <link rel="stylesheet" href="css/medium.css" />
-    <link rel="stylesheet" href="css/large.css" />
+    <link rel="stylesheet" href="../css/standard.css" />
+    <link rel="stylesheet" href="../css/medium.css" />
+    <link rel="stylesheet" href="../css/large.css" />
     <link rel="shortcut icon" href="../images/favicon.png" />
 
   </head>
