--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -12,7 +12,7 @@
   <body>
     <div id="content">
       <header>
-        <img src="images/logo_transparent.png" alt="SpudWeather logo" />
+        <img src="../images/logo_transparent.png" alt="SpudWeather logo" />
         <h1>SpudWeather</h1>
       </header>
       <nav>
