--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/gallery/gallery-mobile.css" />
     <link rel="stylesheet" href="css/gallery/gallery-medium.css" />
     <link rel="stylesheet" href="css/gallery/gallery-large.css" />
-    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="shortcut icon" href="../images/favicon.png" />
 
   </head>
   <body>
     <div id="content">
       <span id="info-banner"></span>
       <header>
-        <img src="images/logo_transparent.png" alt="SpudWeather logo" />
+        <img src="../images/logo_transparent.png" alt="SpudWeather logo" />
         <h1>SpudWeather</h1>
       </header>
       <nav>
@@ -35,39 +35,39 @@
         </div>
         <div id="gallery">
         <div class="gallery-1">
-        <img data-src="images/Caucasus-Mtns.jpg" src="images/micros/Caucasus-Mtns.jpg" alt="Cloud and glacier covered mountains" >
+        <img data-src="../images/Caucasus-Mtns.jpg" src="../images/micros/Caucasus-Mtns.jpg" alt="Cloud and glacier covered mountains" >
         <p>Snow capped mountains</p>
         </div>
         <div class="gallery-2">
-          <img data-src="images/Covered_In_Ice.jpeg" src="images/micros/Covered_In_Ice.jpg" alt="Some tall plants/grasses covered in ice" >
+          <img data-src="../images/Covered_In_Ice.jpeg" src="../images/micros/Covered_In_Ice.jpg" alt="Some tall plants/grasses covered in ice" >
         <p>Even if it makes things slick, ice can be beautiful!</p>
         </div>
         <div class="gallery-3">
-          <img data-src="images/dust_storm.jpg" src="images/micros/dust_storm.jpg" alt="A dust storm in the middle of a city">
+          <img data-src="../images/dust_storm.jpg" src="../images/micros/dust_storm.jpg" alt="A dust storm in the middle of a city">
         <p>Dust storm rolls through a city</p>
         </div>
         <div class="gallery-4">
-          <img data-src="images/Frozen_rose_hip.jpg" src="images/micros/Frozen_rose_hip.jpg" alt="Frozen rose hips on the plant" >
+          <img data-src="../images/Frozen_rose_hip.jpg" src="../images/micros/Frozen_rose_hip.jpg" alt="Frozen rose hips on the plant" >
         <p>A pretty example of hoar frost</p>
         </div>
         <div class="gallery-5">
-          <img data-src="images/Hagelkorn.jpg" src="images/micros/Hagelkorn.jpg" alt="A clear, large, layered hail stone">
+          <img data-src="../images/Hagelkorn.jpg" src="../images/micros/Hagelkorn.jpg" alt="A clear, large, layered hail stone">
         <p>Large, clear hailstones can illustrate the layers of the hail</p>
         </div>
         <div class="gallery-6">
-          <img data-src="images/Playas_de_Encarnación.jpg" src="images/micros/Playas_de_Encarnación.jpg" alt="A rainstrom rolling in from through a bay">
+          <img data-src="../images/Playas_de_Encarnación.jpg" src="../images/micros/Playas_de_Encarnación.jpg" alt="A rainstrom rolling in from through a bay">
         <p>A storm rolls in...</p>
         </div>
         <div class="gallery-7">
-          <img data-src="images/Thunderstorm_Bergen.jpg" src="images/micros/Thunderstorm_Bergen.jpg" alt=" A rainstorm passing over a town" >
+          <img data-src="../images/Thunderstorm_Bergen.jpg" src="../images/micros/Thunderstorm_Bergen.jpg" alt=" A rainstorm passing over a town" >
         <p>A downpour can be a welcome event!</p>
         </div>
         <div class="gallery-8">
-          <img data-src="images/snow-farm.jpg" src="images/micros/snow-farm.jpg" alt="An old, abandoned barn as part of a farm covered in snow" >
+          <img data-src="../images/snow-farm.jpg" src="../images/micros/snow-farm.jpg" alt="An old, abandoned barn as part of a farm covered in snow" >
         <p>An old farm covered in snow</p>
         </div>
         <div class="gallery-9">
-          <img data-src="images/plains-n-mountains.jpg" src="images/micros/plains-n-mountains.jpg" alt="A high mountain plain" >
+          <img data-src="../images/plains-n-mountains.jpg" src="../images/micros/plains-n-mountains.jpg" alt="A high mountain plain" >
         <p>The contrast of high mountain plains</p>
         </div>
       </main>
