--- a/lesson8/preston-7.html
+++ b/lesson8/preston-7.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/standard.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
-    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="shortcut icon" href="../images/favicon.png" />
 
   </head>
 
@@ -17,7 +17,7 @@
     <div id="content">
       <span id="info-banner"></span>
       <header>
-        <img src="images/logo_transparent.png" alt="SpudWeather logo" />
+        <img src="../images/logo_transparent.png" alt="SpudWeather logo" />
         <h1>SpudWeather</h1>
       </header>
       <nav>
@@ -38,9 +38,9 @@
         <div id="banner">
           <!-- large: 960px, medium: 720px, small 540px -->
           <picture>
-            <source srcset="images/wdd230_image_franklinLarge.jpg" media="(min-width: 60em)">
-            <source srcset="images/wdd230_image_franklinMedium.jpg" media="(min-width: 45em) and (max-width: 60em)">
-            <img src="images/wdd230_image_franklinSmall.jpg" alt="Week 6 required hero image">
+            <source srcset="../images/wdd230_image_franklinLarge.jpg" media="(min-width: 60em)">
+            <source srcset="../images/wdd230_image_franklinMedium.jpg" media="(min-width: 45em) and (max-width: 60em)">
+            <img src="../images/wdd230_image_franklinSmall.jpg" alt="Week 6 required hero image">
           <!-- <img -->
             <!-- src="https://loremflickr.com/960/300/farm,field,crops/all" -->
             <!-- alt="Randomly generated farm related image" -->
