--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Preston, ID | SpudWeather</title>
     <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="../css/weathersite/standard.css" />
     <link rel="stylesheet" href="../css/weathersite/medium.css" />
     <link rel="stylesheet" href="../css/weathersite/large.css" />
     <link rel="shortcut icon" href="../images/favicon.png" />
-
   </head>
   <body onload="getWeather('preston');">
     <div id="content">
@@ -36,19 +36,28 @@
         <div id="banner">
           <!-- large: 960px, medium: 720px, small 540px -->
           <picture>
-            <source srcset="../images/wdd230_image_franklinLarge.jpg" media="(min-width: 60em)">
-            <source srcset="../images/wdd230_image_franklinMedium.jpg" media="(min-width: 45em) and (max-width: 60em)">
-            <img src="../images/wdd230_image_franklinSmall.jpg" alt="Week 6 required hero image">
-          <!-- <img -->
+            <source
+              srcset="../images/wdd230_image_franklinLarge.jpg"
+              media="(min-width: 60em)"
+            />
+            <source
+              srcset="../images/wdd230_image_franklinMedium.jpg"
+              media="(min-width: 45em) and (max-width: 60em)"
+            />
+            <img
+              src="../images/wdd230_image_franklinSmall.jpg"
+              alt="Week 6 required hero image"
+            />
+            <!-- <img -->
             <!-- src="https://loremflickr.com/960/300/farm,field,crops/all" -->
             <!-- alt="Randomly generated farm related image" -->
-          <!-- /> -->
-        </picture>
-          <div id="summary" lang="zxx" >
+            <!-- /> -->
+          </picture>
+          <div id="summary" lang="zxx">
             <h3>Weather Summary</h3>
             <table>
               <tr>
-                <td>Currently: </td>
+                <td>Currently:</td>
                 <td id="current">Retrieving...</td>
               </tr>
               <tr>
@@ -60,11 +69,11 @@
                 <td id="wind-speed">Retrieving...</td>
               </tr>
               <tr>
-                <td>Wind Chill: </td>
+                <td>Wind Chill:</td>
                 <td id="wind-chill">Calculating...</td>
               </tr>
               <tr>
-                <td>Humidity: </td>
+                <td>Humidity:</td>
                 <td id="mugginess">Retrieving...</td>
               </tr>
             </table>
@@ -74,46 +83,46 @@
           <h3>Five Day Forecast</h3>
           <div id="forecast-imgs">
             <div id="day1">
-            <img 
-              src="https://loremflickr.com/100/100/sun,sky,cloud"
-              alt="Graphical representation of forecast for day 1"
-            />
-             <p>Day 1 Weather</p>
+              <img
+                src="https://loremflickr.com/100/100/sun,sky,cloud"
+                alt="Graphical representation of forecast for day 1"
+              />
+              <p>Day 1 Weather</p>
             </div>
 
             <div id="day2">
-            <img
-              src="https://loremflickr.com/100/100/sun,sky,cloud"
-              alt="Graphical representation of forecast for day 2"
-            />
-            <p>Day 2 Weather</p>
+              <img
+                src="https://loremflickr.com/100/100/sun,sky,cloud"
+                alt="Graphical representation of forecast for day 2"
+              />
+              <p>Day 2 Weather</p>
             </div>
 
             <div id="day3">
-            <img
-              src="https://loremflickr.com/100/100/sun,sky,cloud"
-              alt="Graphical representation of forecast for day 3"
-            />
-            <p>Day 3 Weather</p>
+              <img
+                src="https://loremflickr.com/100/100/sun,sky,cloud"
+                alt="Graphical representation of forecast for day 3"
+              />
+              <p>Day 3 Weather</p>
             </div>
 
             <div id="day4">
-            <img
-              src="https://loremflickr.com/100/100/sun,sky,cloud"
-              alt="Graphical representation of forecast for day 4"
-            />
-            <p>Day 4 Weather</p>
+              <img
+                src="https://loremflickr.com/100/100/sun,sky,cloud"
+                alt="Graphical representation of forecast for day 4"
+              />
+              <p>Day 4 Weather</p>
             </div>
 
             <div id="day5">
-            <img
-              src="https://loremflickr.com/100/100/sun,sky,cloud"
-              alt="Graphical representation of forecast for day 5"
-            />
-            <p>Day 5 Weather</p>
+              <img
+                src="https://loremflickr.com/100/100/sun,sky,cloud"
+                alt="Graphical representation of forecast for day 5"
+              />
+              <p>Day 5 Weather</p>
             </div>
+          </div>
         </div>
-      </div>
         <div id="article" class="light-background" lang="zxx">
           <h3>Article Title</h3>
           <img
@@ -144,11 +153,11 @@
       </main>
       <footer>
         <div id="map">
-        <img
-          src="https://loremflickr.com/400/200/Idaho,Wyoming,map/all"
-          alt="Map of SpuadWeather's area"
-        />
-      </div>
+          <img
+            src="https://loremflickr.com/400/200/Idaho,Wyoming,map/all"
+            alt="Map of SpuadWeather's area"
+          />
+        </div>
         <div id="contact">
           <p>Address: Lorem ipsum dolor sit amet.</p>
           <p>Telephone: (208) 867-5309</p>
@@ -163,12 +172,11 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
-    WebFont.load({
-      google: {
-        families: [
-          'Special Elite', 'Lexend Giga'
-        ]
-      }
-    })</script>
+      WebFont.load({
+        google: {
+          families: ["Special Elite", "Lexend Giga"],
+        },
+      });
+    </script>
   </body>
 </html>
