--- a/lesson10/gallery-7.html
+++ b/lesson10/gallery-7.html
@@ -6,9 +6,9 @@
 
     <title>Preston, ID | SpudWeather</title>
     <link rel="stylesheet" href="../normalize.css" />
-    <link rel="stylesheet" href="../css/standard.css" />
-    <link rel="stylesheet" href="../css/medium.css" />
-    <link rel="stylesheet" href="../css/large.css" />
+    <link rel="stylesheet" href="../css/weathersite/standard.css" />
+    <link rel="stylesheet" href="../css/weathersite/medium.css" />
+    <link rel="stylesheet" href="../css/weathersite/large.css" />
     <link rel="shortcut icon" href="../images/favicon.png" />
 
   </head>
@@ -71,6 +71,7 @@
           <img data-src="../images/gallery/plains-n-mountains.jpg" src="../images/gallery/micros/plains-n-mountains.jpg" alt="A high mountain plain" >
         <p>The contrast of high mountain plains</p>
         </div>
+        </div>
       </main>
       <footer>
         <div id="map">
@@ -82,8 +83,8 @@
         <div id="contact">
           <p>Address: Lorem ipsum dolor sit amet.</p>
           <p>Telephone: (208) 867-5309</p>
-          <email>  Email: lorem@ipsum.info</email>
-          <span id="social"></span>
+          <p>Email: lorem@ipsum.info</p>
+          <div id="social"></div>
         </div>
       </footer>
         <script src="../scripts/lazyload.js"></script>
@@ -96,5 +97,6 @@
         ]
       }
     })</script>
+    </div>
   </body>
 </html>
