--- a/lesson8/gallery-7.html
+++ b/lesson8/gallery-7.html
@@ -25,7 +25,7 @@
           <li ><a href="preston-7.html">Preston</a></li>
           <li><a href="soda-springs-6.html">Soda Springs</a></li>
           <li><a href="fish-haven-6.html">Fish Haven</a></li>
-          <li><a href="#">Storm Center</a></li>
+          <li><a href="stormcenter.html">Storm Center</a></li>
           <li class="active"><a href="#">Gallery</a></li>
         </ul>
       </nav>
