forecast array bug commit

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -83,43 +83,53 @@
           <h3>Five Day Forecast</h3>
           <div id="forecast-imgs">
             <div id="day1">
+              <p class="dayOfWeek"></p>
               <img
                 src="https://loremflickr.com/100/100/sun,sky,cloud"
                 alt="Graphical representation of forecast for day 1"
               />
-              <p>Day 1 Weather</p>
+              <p class="forecastTemp">Day 1 Weather</p>
+              <p class="forecastSummary"></p>
             </div>
 
             <div id="day2">
+              <p class="dayOfWeek"></p>
               <img
                 src="https://loremflickr.com/100/100/sun,sky,cloud"
                 alt="Graphical representation of forecast for day 2"
               />
-              <p>Day 2 Weather</p>
+              <p class="forecastTemp">Day 2 Weather</p>
+              <p class="forecastSummary"></p>
             </div>
 
             <div id="day3">
+              <p class="dayOfWeek"></p>
               <img
                 src="https://loremflickr.com/100/100/sun,sky,cloud"
                 alt="Graphical representation of forecast for day 3"
               />
-              <p>Day 3 Weather</p>
+              <p class="forecastTemp">Day 3 Weather</p>
+              <p class="forecastSummary"></p>
             </div>
 
             <div id="day4">
+              <p class="dayOfWeek"></p>
               <img
                 src="https://loremflickr.com/100/100/sun,sky,cloud"
                 alt="Graphical representation of forecast for day 4"
               />
-              <p>Day 4 Weather</p>
+              <p class="forecastTemp">Day 4 Weather</p>
+              <p class="forecastSummary"></p>
             </div>
 
             <div id="day5">
+              <p class="dayOfWeek"></p>
               <img
                 src="https://loremflickr.com/100/100/sun,sky,cloud"
                 alt="Graphical representation of forecast for day 5"
               />
-              <p>Day 5 Weather</p>
+              <p class="forecastTemp">Day 5 Weather</p>
+              <p class="forecastSummary"></p>
             </div>
           </div>
         </div>
