add update dates to pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         &copy; | Kyle Johnson | Missouri |
         <a href="https://www.byui.edu/online">BYUI Online Learning</a>
       </p>
-      <p>Last updated: <span id="datePlace"></span></p>
+      <div id="datePlace"></div>
       <script src="scripts/update-date.js"></script>
       
     </footer>
