--- a/lesson10/stormcenter.html
+++ b/lesson10/stormcenter.html
@@ -123,9 +123,10 @@
       <div id="contact">
         <p>Address: Lorem ipsum dolor sit amet.</p>
         <p>Telephone: (208) 867-5309</p>
-        <email> Email: lorem@ipsum.info</email>
-        <span id="social"></span>
+        <p>Email: lorem@ipsum.info</p>
+        <div id="social"></div>
       </div>
+      <div id="datePlace"></div>
     </footer>
     <script src="../scripts/lazyload.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
