--- a/lesson10/gallery-7.html
+++ b/lesson10/gallery-7.html
@@ -26,7 +26,7 @@
           <li ><a href="preston-10.html">Preston</a></li>
           <li><a href="soda-springs-6.html">Soda Springs</a></li>
           <li><a href="fish-haven-6.html">Fish Haven</a></li>
-          <li><a href="#">Storm Center</a></li>
+          <li><a href="stormcenter.html">Storm Center</a></li>
           <li class="active"><a href="#">Gallery</a></li>
         </ul>
       </nav>
@@ -86,7 +86,9 @@
           <p>Email: lorem@ipsum.info</p>
           <div id="social"></div>
         </div>
+        <div id="datePlace"></div>
       </footer>
+      <script src="../scripts/update-date.js"></script>
         <script src="../scripts/lazyload.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
