--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -25,7 +25,7 @@
           <li class="active"><a href="#">Preston</a></li>
           <li><a href="soda-springs-6.html">Soda Springs</a></li>
           <li><a href="fish-haven-6.html">Fish Haven</a></li>
-          <li><a href="#">Storm Center</a></li>
+          <li><a href="stormcenter.html">Storm Center</a></li>
           <li><a href="gallery-7.html">Gallery</a></li>
         </ul>
       </nav>
@@ -174,11 +174,13 @@
           <p>Email: lorem@ipsum.info</p>
           <div id="social"></div>
         </div>
+        <div id="datePlace"></div>
+        <script src="../scripts/update-date.js"></script>
       </footer>
 
       <script src="../scripts/weather.js"></script>
       <script src="../scripts/saturday.js"></script>
-      <script src="../scripts/weather.js"></script>
+      
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
