Incomplete final submission

--- a/lesson11/soda-springs.html
+++ b/lesson11/soda-springs.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Preston, ID | SpudWeather</title>
+    <title>Soda Springs, ID | SpudWeather</title>
     <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="../css/weathersite/standard.css" />
     <link rel="stylesheet" href="../css/weathersite/medium.css" />
     <link rel="stylesheet" href="../css/weathersite/large.css" />
     <link rel="shortcut icon" href="../images/favicon.png" />
   </head>
-  <body onload="getWeather('preston');">
+  <body onload="getWeather('soda-springs');">
     <div id="content">
       <span id="info-banner"></span>
       <header>
@@ -22,30 +22,30 @@
         <ul class="navigation responsive">
           <li><a class="ham" href="#">&#9776; Menu</a></li>
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="#">Preston</a></li>
-          <li><a href="soda-springs.html">Soda Springs</a></li>
+          <li><a href="preston.html">Preston</a></li>
+          <li class="active"><a href="soda-springs.html">Soda Springs</a></li>
           <li><a href="fish-haven.html">Fish Haven</a></li>
           <li><a href="stormcenter.html">Storm Center</a></li>
-          <li><a href="gallery-7.html">Gallery</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </nav>
       <main>
         <div id="title">
-          <h2>Preston Idaho</h2>
+          <h2>Soda Springs Idaho</h2>
         </div>
         <div id="banner">
           <!-- large: 960px, medium: 720px, small 540px -->
           <picture>
             <source
-              srcset="../images/large/preston-hero.jpg"
+              srcset="../images/large/soda-hero.jpg"
               media="(min-width: 60em)"
             />
             <source
-              srcset="../images/medium/preston-hero.jpg"
+              srcset="../images/medium/soda-hero.jpg"
               media="(min-width: 45em) and (max-width: 60em)"
             />
             <img
-              src="../images/mobile/preston-hero.jpg"
+              src="../images/mobile/soda-hero.jpg"
               alt="Week 6 required hero image"
             />
             <!-- <img -->
