--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="../images/favicon.png" />
 
   </head>
-  <body>
+  <body onload="getHomepageTowns();">
     <div id="content">
       <span id="info-banner"></span>
       <header>
@@ -22,29 +22,22 @@
       <nav>
         <ul class="navigation responsive">
           <li><a class="ham" href="#">&#9776; Menu</a></li>
-          <li><a href="#">Home</a></li>
-          <li ><a href="preston-7.html">Preston</a></li>
-          <li><a href="soda-springs-6.html">Soda Springs</a></li>
-          <li><a href="fish-haven-6.html">Fish Haven</a></li>
-          <li><a href="#">Storm Center</a></li>
-          <li class="active"><a href="#">Gallery</a></li>
+          <li class="active"><a href="#">Home</a></li>
+          <li ><a href="preston.html">Preston</a></li>
+          <li><a href="soda-springs.html">Soda Springs</a></li>
+          <li><a href="fish-haven.html">Fish Haven</a></li>
+          <li><a href="stormcenter.html">Storm Center</a></li>
+          <li ><a href="gallery.html">Gallery</a></li>
         </ul>
       </nav>
       <main>
-        <div id="title">
-            <h2></h2>
+        <div id="greeting">
+            <h2>Welcome to SpudWeather!</h2>
+            <h3>Weather for your own little slice of paradise.</h3>
         </div>
-<!-- 
+        <div class = "town-cards">
 
-
-
-        INSERT PAGE CONTENT HERE
-
-
-
-
-
- -->
+        </div>
 
     </main>
     <footer>
@@ -61,6 +54,7 @@
         <div id="social"></div>
       </div>
       </footer>
+      <script src="../scripts/homeTownInfo.js"></script>
         <script src="../scripts/lazyload.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
