HTML error resolution

--- a/final/contact.html
+++ b/final/contact.html
@@ -51,13 +51,13 @@
         <iframe id="northMap"
   width="600"
   height="450"
-  frameborder="0" style="border:0" allowfullscreen>
+  style="border:0" allowfullscreen>
 </iframe>
 
 <iframe id="southMap"
   width="600"
   height="450"
-  frameborder="0" style="border:0" allowfullscreen>
+  style="border:0" allowfullscreen>
 </iframe>
       </div>
 
@@ -67,7 +67,7 @@
       <br />
       <hr>
       <br />
-      <span id="datePlace">
+      <span id="datePlace"></span>
     </footer>
 
     <script src="../scripts/gmaps.js"></script>
