--- a/final/index.html
+++ b/final/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../images/scoots/favicon.png" />
     <script src="../scripts/FinalWeather.js"></script>
   </head>
-  <body onload="getWeather();"">
+  <body onload="getWeather();">
     <header>
     </header>
     <div id="sidebar">
@@ -104,7 +104,7 @@
       <br />
       <hr>
       <br />
-      <span id="datePlace">
+      <span id="datePlace"></span>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
