--- a/final/tours.html
+++ b/final/tours.html
@@ -40,7 +40,7 @@
       <br />
       <hr>
       <br />
-      <span id="datePlace">
+      <span id="datePlace"></span>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
